# neuro

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
notebooks/: 01_classical_bench.ipynb  02_cortical_depth_qaoa.ipynb  03_meta-assembly_qaoa.ipynb
notebooks/simul/: 02_cortical_qiskit_simul.ipynb
src/: features.py
src/analysis/: metrics.py  validation.py
src/assembly/: __init__.py  clustering.py  overlap.py  pruning.py
src/dataio/: config.py  data_structures.py  loaders.py  processors.py  validators.py
src/qaoa/: hamiltonians.py  runners.py  simulators.py
src/qaoa/pipelines/: meta_assembly.py
src/scripts/: precompute_features.py
tests/: conftest.py  test_analysis_metrics.py  test_data_structures.py  test_loaders.py  test_processors.py  test_qaoa_simulators.py  test_smoke_qaoa.py  test_validators.py
